//Ultima DB 3
//Cambios a tarea
ALTER TABLE `tarea` ADD `last_change` DATE NOT NULL DEFAULT CURRENT_TIMESTAMP AFTER `columna_fk`; 